# agent-observability

./: .dockerignore  .env.example  .gitignore  CLAUDE.md  Dockerfile  LICENSE  PLANS.md  README.md  docker-compose.yml  node_modules  package.json  tsconfig.tsbuildinfo
docs/: README.md  index.html  next.config.mjs  package.json  tsconfig.json  vite.config.ts
docs-new/: next.config.mjs  package.json
frontend/: components.json  doctor.config.json  index.html  package.json  vite.config.ts
migrations/: 001_create_agent_sessions.sql  002_add_account_id.sql  003_duration_ms_bigint.sql  004_add_pagination_index.sql  005_add_raw_report.sql  006_add_transport.sql  007_started_at_index.sql  008_create_eval_runs.sql  009_split_eval_framework.sql  010_create_native_livekit_observability.sql  010_eval_latency_columns.sql  011_add_agent_identifiers.sql  011_eval_usage_cost_columns.sql  012_add_run_name.sql  012_create_agents_table.sql  012_drop_raw_payload_column.sql  013_add_cached_prompt_tokens.sql  013_add_eval_run_status.sql  013_agents_first_class_and_eval_metrics.sql  013_create_sim_library.sql  014_add_eval_run_name.sql  014_add_eval_run_status.sql  014_create_schedules.sql  014_relax_agent_id_not_null.sql  015_add_eval_latency_columns.sql  015_add_rubric_criteria.sql  015_backfill_started_at_from_chat_history.sql  015_eval_idempotent_ingest.sql  016_add_eval_usage_columns.sql  016_backfill_turn_count_to_assistant_messages.sql  016_create_sim_agents.sql  017_add_eval_cost_column.sql  017_alert_rules.sql  017_repair_rubric_jsonb.sql  018_add_session_cost_column.sql  018_create_live_calls.sql  018_session_raw_report_patches.sql  018_transcript_search.sql  019_add_live_call_session.sql  019_ao_simulation.sql  (+7 more)
plugins/: PLAN.md
plugins/agent-observability-sdk/: README.md  pyproject.toml
plugins/agent-observability-sdk/src/agent_observability/judges/: __init__.py  hallucination.py  intent.py  knowledge_base.py  loop.py  response_accuracy.py  variable.py
plugins/agent-observability-sdk/src/agent_observability/livekit/: __init__.py  env.py  evaluation.py  goals.py  tags.py
plugins/agent-observability-sdk/src/agent_observability/livekit/judges/: __init__.py  _base.py  _instructions.py  conversation.py  goal.py  hallucination.py  instruction.py  intent.py  knowledge_base.py  loop.py  response_accuracy.py  stt.py  tool.py  turn_detection.py  variable.py
plugins/agent-observability-sdk/src/agent_observability/livekit/pytest/: __init__.py  collector.py  events.py  payload.py  plugin.py  uploader.py
plugins/agent-observability-sdk/tests/: conftest.py  test_livekit_helpers.py  test_llm_judges.py  test_programmatic_judges.py
plugins/agent-observability-sdk/tests/pytest_plugin/: test_ci.py  test_collector.py  test_events.py  test_payload.py  test_plugin.py  test_streaming.py  test_uploader.py
plugins/pipecat-evals/: README.md  pyproject.toml
plugins/pipecat-evals/examples/: README.md  test_manual_run_result.py  test_mock_pipecat_agent.py
plugins/pipecat-evals/src/pipecat_evals/: __init__.py  hooks.py  judges.py  run_result.py  session.py  tools.py
plugins/pipecat-evals/tests/: test_judges.py  test_run_result.py  test_session_capture.py  test_tools.py
plugins/pytest-agent-observability/: README.md  pyproject.toml
plugins/pytest-agent-observability/src/pytest_agent_observability/: ci.py  collector.py  events.py  payload.py  plugin.py  uploader.py
plugins/pytest-agent-observability/src/pytest_agent_observability/judges/: __init__.py  prompt.py  rubrics.py  runner.py  types.py
plugins/pytest-agent-observability/src/pytest_agent_observability/judges/adapters/: __init__.py  openai.py
plugins/pytest-agent-observability/tests/: test_ci.py  test_collector.py  test_events.py  test_examples_metadata.py  test_judge_group.py  test_judges.py  test_payload.py  test_plugin.py  test_streaming.py
scripts/: llm-smoke.ts
services/calling/: .env.example  README.md  docker-compose.yml  pyproject.toml
services/calling/alembic/: env.py
services/calling/alembic/versions/: 4b8c1d9e2f34_evaluation_schedules.py  5037a5b41402_scenarios_agent_id_not_null.py  5ec9b7d2a481_persona_behavior_modifiers.py  6a7b8c9d0e12_observed_calls.py  71b483152209_initial_schema_default_org.py  9f2c3d4a8b71_agent_connection_metadata.py  b2d4e6f8a901_alert_rules.py  c8f2a14e7d62_scenario_evaluator_configuration.py  e0d4b2f7a963_scenario_revision_history.py
services/calling/src/truman_calling/api/: __init__.py  db.py  deps.py  main.py  ws.py
services/calling/src/truman_calling/api/routers/: _crud.py  agents.py  alerts.py  audio.py  calls.py  judge.py  personas.py  profiles.py  results.py  rubrics.py  runs.py  scenarios.py  schedules.py  suites.py  takeover.py  voices.py
services/calling/src/truman_calling/api/schemas/: agents.py  alerts.py  auto_gen.py  calls.py  common.py  judge.py  personas.py  profiles.py  results.py  rubrics.py  runs.py  scenarios.py  schedules.py  suites.py
services/calling/src/truman_calling/api/services/: auto_gen.py
services/calling/src/truman_calling/caller/: audio_tap.py  config.py  db.py  dial.py  eval.py  persona_agent.py  plugins.py  run_orchestrator.py  server.py  takeover.py  worker.py
services/calling/src/truman_calling/caller/personas/: priya_order_status.py
services/calling/src/truman_calling/caller/rubrics/: dynamic_rubric.py  mamaearth_v1.py
services/calling/src/truman_calling/core/: __init__.py  livekit_judge.py  persona_prompts.py  pricing.py  queue.py  settings.py
services/calling/src/truman_calling/core/models/: __init__.py  agents.py  alerts.py  calls.py  orgs.py  personas.py  profiles.py  rubrics.py  runs.py  scenarios.py  schedules.py  suites.py
src/: auth.ts  config.ts  db.ts  events.ts  index.ts  json.ts  livekit-auth.ts  livekit-observability.ts  metrics.ts  migrate.ts  parse.ts  raw-report.ts  response.ts  s3.ts  schema.ts  stats-core.ts  stats-sql.ts  turn-rules.ts  worker.ts
tests-integration/: alerts-delivery.test.ts  alerts-engine-semantics.test.ts  alerts-rules-db.test.ts  alerts-triggers.test.ts  goals-analyzer.test.ts  goals-db.test.ts  (+7 more)
(+464 files in other folders)
