[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "agent-observability-sdk"
version = "0.2.0"
description = "Evaluation judges for AI voice agents (hallucination, response accuracy, intent, tool correctness, etc.)"
readme = "README.md"
requires-python = ">=3.10,<3.15"
license = { text = "MIT" }
authors = [{ name = "Plivo Labs" }]
keywords = ["livekit", "agents", "observability", "evals", "judges", "llm"]
classifiers = [
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "License :: OSI Approved :: MIT License",
]
dependencies = [
  # We extend `livekit.agents.evals.Judge` and emit `JudgmentResult` from it.
  # Same upper-bound as agent-transport-python, which is the most likely host.
  "livekit-agents>=1.5.2,<1.6",
  # The pytest plugin lives under `agent_observability.livekit.pytest` and is
  # surfaced via the pytest11 entry-point below. pytest stays a runtime dep
  # because the entry-point is loaded at pytest startup; httpx powers the
  # uploader. Both are small.
  "pytest>=7.0",
  "httpx>=0.24",
]

[project.optional-dependencies]
dev = [
  "pytest-asyncio>=0.21",
]

[project.entry-points.pytest11]
agent_observability = "agent_observability.livekit.pytest.plugin"

[tool.hatch.build.targets.wheel]
packages = ["src/agent_observability"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "function"
