[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "pipecat-evals"
version = "0.1.3"
description = "LiveKit-style pytest eval helpers for Pipecat agents"
readme = "README.md"
requires-python = ">=3.9"
license = { text = "MIT" }
authors = [{ name = "Plivo Labs" }]
keywords = ["pipecat", "agents", "evals", "pytest", "observability"]
classifiers = [
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "License :: OSI Approved :: MIT License",
]
dependencies = []

[project.optional-dependencies]
pipecat = ["pipecat-ai"]
openai = ["openai>=1.40"]
dev = [
  "pytest>=7.0",
  "pytest-asyncio>=0.21",
]

[tool.hatch.build.targets.wheel]
packages = ["src/pipecat_evals"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "function"
