[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "pytest-agent-observability"
version = "0.2.1"
description = "pytest plugin that uploads LiveKit-agents eval results to agent-observability"
readme = "README.md"
requires-python = ">=3.9"
license = { text = "MIT" }
authors = [{ name = "Plivo Labs" }]
keywords = ["pytest", "livekit", "agents", "observability", "evals"]
classifiers = [
  "Framework :: Pytest",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "License :: OSI Approved :: MIT License",
]
dependencies = [
  "pytest>=7.0",
  "httpx>=0.24",
]

[project.optional-dependencies]
dev = [
  "pytest>=7.0",
  "pytest-asyncio>=0.21",
]

[project.entry-points.pytest11]
agent_observability = "pytest_agent_observability.plugin"

[tool.hatch.build.targets.wheel]
packages = ["src/pytest_agent_observability"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "function"
