[project]
name = "truman-calling"
version = "0.1.0"
description = "Vendored Truman live-calling subsystem (api + caller + core) — agent-observability's self-contained voice caller. No dependency on the external ~/truman checkout."
requires-python = ">=3.11"
dependencies = [
    # ── caller (voice worker: agent-transport + persona session + Plivo) ──
    # agent-transport is a prebuilt Rust abi3 wheel from PyPI. PIN EXACTLY:
    # caller/audio_tap.py + caller/takeover.py reach into private internals
    # (next_in_chain, _audio_source, _data_ch, capture_frame) that can move
    # between releases. 0.1.11 is the version Truman is tested against.
    "agent-transport[livekit]==0.1.11",
    # livekit-agents is pinned tightly: core/livekit_judge.py imports the
    # PRIVATE livekit.agents.evals.judge._LLMJudge, which a minor bump can break.
    "livekit-agents[silero,turn-detector]~=1.5",
    "livekit-plugins-deepgram~=1.5",
    "livekit-plugins-elevenlabs~=1.5",
    "livekit-plugins-openai~=1.5",
    "aiohttp>=3.10",
    "plivo>=4.60",
    "openai>=1.50",
    "python-dotenv>=1.0",
    # ── api (FastAPI /v1/* + WS app AO orchestrates) ──
    "fastapi>=0.115",
    "uvicorn[standard]>=0.30",
    "httpx>=0.27",
    # ── core (shared models, settings, queue, judge, pricing) ──
    "pydantic>=2.7",
    "pydantic-settings>=2.5",
    "sqlalchemy[asyncio]>=2.0",
    "alembic>=1.14",
    "psycopg[binary,pool]>=3.2",
    # PIN <8: redis-py 8.x raises TimeoutError on a blocking XREADGROUP BLOCK
    # that returns nothing, which kills the caller's place_call consume loop.
    # Truman is tested on 7.4.x; stay on that major.
    "redis>=7.4,<8",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
# Only the importable package ships in the wheel. alembic/ + alembic.ini live at
# the project root on purpose — migrations are operational assets run from this
# checkout (`bun run caller:migrate`), NOT from a pip-installed wheel. A
# wheel-only deploy imports fine but cannot create its schema; run migrations
# from the source tree. See README "Deploy model + known inherited issues".
packages = ["src/truman_calling"]

[tool.ruff]
line-length = 100
target-version = "py311"
